package edu.uees.tutorias.domain;

/**
 * Estados posibles de un {@link HorarioTutoria}.
 */
public enum EstadoHorario {
    DISPONIBLE,
    RESERVADO,
    INACTIVO
}
